<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtJudul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvJudul"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/angka_pertama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/masukan_angka_pertama"
        android:textSize="14sp"
        android:layout_marginTop="22dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/angka_kedua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/masukan_angka_kedua"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnTambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus" />

        <Button
            android:id="@+id/btnKurang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min"
            android:layout_marginStart="8dp" />

        <Button
            android:id="@+id/btnBagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bagi"
            android:layout_marginStart="8dp"/>

        <Button
            android:id="@+id/btnKali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kali"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bersihkan" />

    <TextView
        android:id="@+id/tvHasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="normal|bold"
        android:layout_marginTop="35dp"/>

    <TextView
        android:id="@+id/tvNilai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nilai"
        android:textSize="36sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="normal|bold"
        android:layout_marginTop="8dp"/>

</LinearLayout>